--- a/index.html
+++ b/index.html
@@ -3,109 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bala Naga Sai Kumar Vetsa - Resume</title>
+  <title>Welcome | Bala Naga Sai Kumar Vetsa</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
+      background: linear-gradient(to right, #f9f9f9, #e2eafc);
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
-      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 30px;
+    .welcome-container {
+      text-align: center;
+      background: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 600px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: #004080;
+    }
+    p {
+      font-size: 1.1rem;
+      margin: 20px 0;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      background-color: #007bff;
+      color: white;
+      font-size: 1rem;
+      border: none;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      color: #0056b3;
-    }
-    .section {
-      margin-bottom: 30px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    a {
-      color: #0077cc;
+      cursor: pointer;
       text-decoration: none;
+      transition: background-color 0.3s;
     }
-    a:hover {
-      text-decoration: underline;
+    .btn:hover {
+      background-color: #0056b3;
     }
-    .contact-info {
-      margin-bottom: 20px;
-    }
-    .contact-info p {
-      margin: 4px 0;
+    .resume-section {
+      display: none;
+      margin-top: 40px;
+      text-align: left;
     }
   </style>
+  <script>
+    function showResume() {
+      document.querySelector('.resume-section').style.display = 'block';
+      document.getElementById('moreBtn').style.display = 'none';
+    }
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Bala Naga Sai Kumar Vetsa</h1>
-    <div class="contact-info">
+  <div class="welcome-container">
+    <h1>Welcome to My Personal Website</h1>
+    <p>Hello! I'm Bala Naga Sai Kumar Vetsa, an enthusiastic learner in AI & ML. Scroll down to explore more about me.</p>
+    <button id="moreBtn" class="btn" onclick="showResume()">Click Here for More Details</button>
+
+    <div class="resume-section">
+      <h2>Bala Naga Sai Kumar Vetsa - Resume</h2>
       <p>📞 +91 8309974727</p>
       <p>✉️ <a href="mailto:balanagasaikumarvetsa@gmail.com">balanagasaikumarvetsa@gmail.com</a></p>
       <p>📍 Perikeedu, Krishna District, 521105</p>
       <p>🔗 <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn Profile</a></p>
-    </div>
 
-    <div class="section">
-      <h2>Professional Summary</h2>
-      <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems. Passionate about learning cutting-edge technologies to contribute to impactful projects in the AI/ML domain.</p>
-    </div>
+      <h3>Professional Summary</h3>
+      <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems.</p>
 
-    <div class="section">
-      <h2>Education</h2>
+      <h3>Education</h3>
       <ul>
-        <li><strong>B.Tech – CSE (AI & ML)</strong>, Ramachandra College of Engineering, Eluru (2022–Present) – CGPA: 76.14%</li>
-        <li><strong>Intermediate – MPC</strong>, NRI Junior College, Eluru (2020–2022) – 95%</li>
-        <li><strong>SSC</strong>, Sri Chaitanya EM High School (2019–2020) – 100%</li>
+        <li><strong>B.Tech – CSE (AI & ML)</strong>, Ramachandra College of Engineering – CGPA: 76.14%</li>
+        <li><strong>Intermediate – MPC</strong>, NRI Junior College – 95%</li>
+        <li><strong>SSC</strong>, Sri Chaitanya EM High School – 100%</li>
       </ul>
-    </div>
 
-    <div class="section">
-      <h2>Technical Skills</h2>
+      <h3>Technical Skills</h3>
       <ul>
-        <li><strong>Programming Languages:</strong> Python, C, HTML, CSS</li>
+        <li><strong>Languages:</strong> Python, C, HTML, CSS</li>
         <li><strong>Databases:</strong> SQL</li>
-        <li><strong>Soft Skills:</strong> Critical Thinking, Problem Solving, Collaboration, Decision Making, Multi-tasking, Zeal</li>
-        <li><strong>Languages:</strong> English, Telugu</li>
+        <li><strong>Soft Skills:</strong> Critical Thinking, Teamwork, Zeal</li>
+        <li><strong>Languages Known:</strong> English, Telugu</li>
       </ul>
-    </div>
 
-    <div class="section">
-      <h2>Certifications</h2>
+      <h3>Certifications</h3>
       <ul>
         <li>C Programming Bootcamp – SimpliLearn</li>
-        <li>Python for Complete Beginners – SimpliLearn</li>
+        <li>Python for Beginners – SimpliLearn</li>
       </ul>
-    </div>
 
-    <div class="section">
-      <h2>Internships</h2>
-      <p><strong>Data Analysis and Model Development Intern – Excler</strong></p>
+      <h3>Internship</h3>
+      <p><strong>Data Analysis and Model Development – Excler</strong><br>Worked with ML workflows including data preprocessing.</p>
+
+      <h3>Projects</h3>
       <ul>
-        <li>Gained practical exposure to machine learning workflows, including data collection and preprocessing.</li>
+        <li><strong>Emoji Prediction:</strong> Used Python and ML libraries to predict emojis from text input.</li>
       </ul>
-    </div>
 
-    <div class="section">
-      <h2>Projects</h2>
+      <h3>Personal Info</h3>
       <ul>
-        <li><strong>Emoji Prediction:</strong> Developed a model to predict emojis based on text using Python and ML libraries.</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Personal Information</h2>
-      <ul>
-        <li><strong>Date of Birth:</strong> 20-07-2005</li>
+        <li><strong>DOB:</strong> 20-07-2005</li>
         <li><strong>Hobbies:</strong> Video Editing, Playing Cricket</li>
       </ul>
     </div>
