--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Welcome | Bala Naga Sai Kumar Vetsa</title>
   <style>
     body {
@@ -22,7 +22,7 @@
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 800px;
+      max-width: 900px;
       width: 90%;
     }
     h1 {
@@ -54,6 +54,9 @@
       margin-top: 40px;
       text-align: left;
     }
+    ul {
+      padding-left: 20px;
+    }
   </style>
   <script>
     function showResume() {
@@ -65,46 +68,52 @@
 <body>
   <div class="welcome-container">
     <h1>Welcome to My Personal Website</h1>
-    <p>Hello! I'm Bala Naga Sai Kumar Vetsa, an enthusiastic learner in AI & ML.</p>
+    <p>Hello! I'm <strong>Bala Naga Sai Kumar Vetsa</strong>, an undergraduate in AI & ML. Click below to view my full resume.</p>
     <button id="moreBtn" class="btn" onclick="showResume()">Click Here for More Details</button>
 
     <div class="resume-section">
-      <h2>Resume</h2>
+      <h2>Bala Naga Sai Kumar Vetsa - Resume</h2>
       <p><strong>📞</strong> +91 8309974727</p>
       <p><strong>✉️</strong> <a href="mailto:balanagasaikumarvetsa@gmail.com">balanagasaikumarvetsa@gmail.com</a></p>
       <p><strong>📍</strong> Perikeedu, Krishna District, 521105</p>
-      <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn Profile</a></p>
+      <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn</a></p>
 
       <h3>Professional Summary</h3>
-      <p>Undergraduate student in AI & ML, passionate about solving real-world problems using technology.</p>
+      <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems. Passionate about learning cutting-edge technologies to contribute to impactful projects and innovations in the AI/ML domain.</p>
 
       <h3>Education</h3>
       <ul>
-        <li><strong>B.Tech – CSE (AI & ML)</strong>, Ramachandra College – 76.14%</li>
-        <li><strong>Intermediate – MPC</strong>, NRI Junior College – 95%</li>
-        <li><strong>SSC</strong>, Sri Chaitanya EM High School – 100%</li>
+        <li><strong>Bachelor of Technology (B.Tech) – CSE (AI & ML)</strong><br>Ramachandra College of Engineering, Eluru, AP<br>2022 – Present | CGPA: 76.14%</li>
+        <li><strong>Intermediate – MPC</strong><br>NRI Junior College, Eluru<br>2020 – 2022 | Percentage: 95%</li>
+        <li><strong>SSC (10th Class)</strong><br>Sri Chaitanya EM High School<br>2019 – 2020 | Percentage: 100%</li>
       </ul>
 
-      <h3>Skills & Certifications</h3>
+      <h3>Technical Skills</h3>
       <ul>
-        <li>Languages: Python, C, HTML, CSS</li>
-        <li>Database: SQL</li>
-        <li>Soft Skills: Problem Solving, Teamwork, Zeal</li>
-        <li>Certifications: C Programming (SimpliLearn), Python for Beginners</li>
+        <li><strong>Programming Languages:</strong> Python, C, HTML, CSS</li>
+        <li><strong>Databases:</strong> SQL</li>
+        <li><strong>Soft Skills:</strong> Critical Thinking, Problem Solving, Collaboration, Decision Making, Multi-tasking, Zeal</li>
+        <li><strong>Languages Known:</strong> English, Telugu</li>
       </ul>
 
-      <h3>Internship</h3>
-      <p>Data Analysis & Model Development – Excler</p>
-
-      <h3>Project</h3>
+      <h3>Certifications</h3>
       <ul>
-        <li>Emoji Prediction using Python & ML libraries</li>
+        <li>C Programming Bootcamp: The Complete C Language – SimpliLearn</li>
+        <li>Python for Complete Beginners – SimpliLearn</li>
       </ul>
 
-      <h3>Personal Info</h3>
+      <h3>Internships</h3>
+      <p><strong>Data Analysis and Model Development Intern – Excler</strong><br>Gained practical exposure to machine learning workflows, including data collection and preprocessing.</p>
+
+      <h3>Projects</h3>
       <ul>
-        <li>Date of Birth: 20-07-2005</li>
-        <li>Hobbies: Video Editing, Cricket</li>
+        <li><strong>Emoji Prediction:</strong> Developed a model to predict emojis based on text using Python and ML libraries.</li>
+      </ul>
+
+      <h3>Personal Information</h3>
+      <ul>
+        <li><strong>Date of Birth:</strong> 20-07-2005</li>
+        <li><strong>Hobbies:</strong> Video Editing, Playing Cricket</li>
       </ul>
     </div>
   </div>
