--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 900px;
+      max-width: 800px;
       width: 90%;
     }
     h1 {
@@ -68,15 +68,16 @@
 <body>
   <div class="welcome-container">
     <h1>Welcome to My Personal Website</h1>
-    <p>Hello! I'm <strong>Bala Naga Sai Kumar Vetsa</strong>, an undergraduate in AI & ML. Click below to view my full resume.</p>
+    <p>Hello! I'm Bala Naga Sai Kumar Vetsa, an enthusiastic learner in AI & ML. Scroll down to explore more about me.</p>
     <button id="moreBtn" class="btn" onclick="showResume()">Click Here for More Details</button>
 
     <div class="resume-section">
-      <h2>Bala Naga Sai Kumar Vetsa - Resume</h2>
+      <h2>Resume</h2>
+      <p><strong>Name:</strong> Bala Naga Sai Kumar Vetsa</p>
       <p><strong>📞</strong> +91 8309974727</p>
       <p><strong>✉️</strong> <a href="mailto:balanagasaikumarvetsa@gmail.com">balanagasaikumarvetsa@gmail.com</a></p>
       <p><strong>📍</strong> Perikeedu, Krishna District, 521105</p>
-      <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn</a></p>
+      <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn Profile</a></p>
 
       <h3>Professional Summary</h3>
       <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems. Passionate about learning cutting-edge technologies to contribute to impactful projects and innovations in the AI/ML domain.</p>
