--- a/index.html
+++ b/index.html
@@ -3,120 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome | Bala Naga Sai Kumar Vetsa</title>
+  <title>Bala Naga Sai Kumar Vetsa | Resume Website</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #f9f9f9, #e2eafc);
       margin: 0;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #ecf0f3, #d0e1f9);
+      color: #333;
     }
-    .welcome-container {
+    .hero {
+      background: linear-gradient(to right, #0052D4, #4364F7, #6FB1FC);
+      color: white;
       text-align: center;
+      padding: 80px 20px;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      margin: 10px 0 30px;
+    }
+    .hero button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background-color: #fff;
+      color: #0052D4;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .hero button:hover {
+      background-color: #f0f0f0;
+    }
+    .resume {
+      display: none;
+      max-width: 900px;
+      margin: 50px auto;
       background: white;
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 800px;
-      width: 90%;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 2.5rem;
-      color: #004080;
-    }
-    p {
-      font-size: 1.1rem;
-      margin: 20px 0;
-    }
-    .btn {
-      display: inline-block;
-      padding: 12px 25px;
-      background-color: #007bff;
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: background-color 0.3s;
-      margin-top: 20px;
-    }
-    .btn:hover {
-      background-color: #0056b3;
-    }
-    .resume-section {
-      display: none;
-      margin-top: 40px;
-      text-align: left;
+    h2 {
+      color: #0052D4;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 5px;
     }
     ul {
       padding-left: 20px;
     }
+    a {
+      color: #0052D4;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
   <script>
     function showResume() {
-      document.querySelector('.resume-section').style.display = 'block';
-      document.getElementById('moreBtn').style.display = 'none';
+      document.querySelector('.resume').style.display = 'block';
+      document.getElementById('showBtn').style.display = 'none';
     }
   </script>
 </head>
 <body>
-  <div class="welcome-container">
-    <h1>Welcome to My Personal Website</h1>
-    <p>Hello! I'm Bala Naga Sai Kumar Vetsa, an enthusiastic learner in AI & ML. Scroll down to explore more about me.</p>
-    <button id="moreBtn" class="btn" onclick="showResume()">Click Here for More Details</button>
+  <section class="hero">
+    <h1>Hello, I'm Bala Naga Sai Kumar Vetsa</h1>
+    <p>AI & ML Enthusiast | Resume Website</p>
+    <button id="showBtn" onclick="showResume()">Click Here for More Details</button>
+  </section>
 
-    <div class="resume-section">
-      <h2>Resume</h2>
-      <p><strong>Name:</strong> Bala Naga Sai Kumar Vetsa</p>
-      <p><strong>📞</strong> +91 8309974727</p>
-      <p><strong>✉️</strong> <a href="mailto:balanagasaikumarvetsa@gmail.com">balanagasaikumarvetsa@gmail.com</a></p>
-      <p><strong>📍</strong> Perikeedu, Krishna District, 521105</p>
-      <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn Profile</a></p>
+  <section class="resume">
+    <h2>Contact Information</h2>
+    <p><strong>📞</strong> +91 8309974727</p>
+    <p><strong>📧</strong> <a href="mailto:balanagasaikumarvetsa@gmail.com">balanagasaikumarvetsa@gmail.com</a></p>
+    <p><strong>📍</strong> Perikeedu, Krishna District, 521105</p>
+    <p><strong>🔗</strong> <a href="https://linkedin.com/in/bala-naga-sai-kumar-vetsa-a13aa9258" target="_blank">LinkedIn Profile</a></p>
 
-      <h3>Professional Summary</h3>
-      <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems. Passionate about learning cutting-edge technologies to contribute to impactful projects and innovations in the AI/ML domain.</p>
+    <h2>Professional Summary</h2>
+    <p>Dedicated and detail-oriented undergraduate specializing in Artificial Intelligence and Machine Learning. Eager to apply programming and analytical skills to solve real-world problems. Passionate about learning cutting-edge technologies to contribute to impactful projects and innovations in the AI/ML domain.</p>
 
-      <h3>Education</h3>
-      <ul>
-        <li><strong>Bachelor of Technology (B.Tech) – CSE (AI & ML)</strong><br>Ramachandra College of Engineering, Eluru, AP<br>2022 – Present | CGPA: 76.14%</li>
-        <li><strong>Intermediate – MPC</strong><br>NRI Junior College, Eluru<br>2020 – 2022 | Percentage: 95%</li>
-        <li><strong>SSC (10th Class)</strong><br>Sri Chaitanya EM High School<br>2019 – 2020 | Percentage: 100%</li>
-      </ul>
+    <h2>Education</h2>
+    <ul>
+      <li><strong>B.Tech – CSE (AI & ML)</strong>, Ramachandra College of Engineering, Eluru, AP (2022 – Present) – CGPA: 76.14%</li>
+      <li><strong>Intermediate – MPC</strong>, NRI Junior College, Eluru (2020 – 2022) – 95%</li>
+      <li><strong>SSC</strong>, Sri Chaitanya EM High School (2019 – 2020) – 100%</li>
+    </ul>
 
-      <h3>Technical Skills</h3>
-      <ul>
-        <li><strong>Programming Languages:</strong> Python, C, HTML, CSS</li>
-        <li><strong>Databases:</strong> SQL</li>
-        <li><strong>Soft Skills:</strong> Critical Thinking, Problem Solving, Collaboration, Decision Making, Multi-tasking, Zeal</li>
-        <li><strong>Languages Known:</strong> English, Telugu</li>
-      </ul>
+    <h2>Technical Skills</h2>
+    <ul>
+      <li>Programming Languages: Python, C, HTML, CSS</li>
+      <li>Databases: SQL</li>
+      <li>Soft Skills: Critical Thinking, Problem Solving, Collaboration, Decision Making, Multi-tasking, Zeal</li>
+      <li>Languages Known: English, Telugu</li>
+    </ul>
 
-      <h3>Certifications</h3>
-      <ul>
-        <li>C Programming Bootcamp: The Complete C Language – SimpliLearn</li>
-        <li>Python for Complete Beginners – SimpliLearn</li>
-      </ul>
+    <h2>Certifications</h2>
+    <ul>
+      <li>✅ C Programming Bootcamp – SimpliLearn</li>
+      <li>✅ Python for Complete Beginners – SimpliLearn</li>
+    </ul>
 
-      <h3>Internships</h3>
-      <p><strong>Data Analysis and Model Development Intern – Excler</strong><br>Gained practical exposure to machine learning workflows, including data collection and preprocessing.</p>
+    <h2>Internships</h2>
+    <ul>
+      <li><strong>Data Analysis and Model Development – Excler:</strong> Gained practical exposure to machine learning workflows, including data collection and preprocessing.</li>
+    </ul>
 
-      <h3>Projects</h3>
-      <ul>
-        <li><strong>Emoji Prediction:</strong> Developed a model to predict emojis based on text using Python and ML libraries.</li>
-      </ul>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Emoji Prediction:</strong> Developed a model to predict emojis based on text using Python and ML libraries.</li>
+      <li><strong>Face Recognition:</strong> Built a face recognition system with high accuracy using feature extraction techniques.</li>
+      <li><strong>Employability Burnout Analysis:</strong> Analyzed burnout factors with data-driven strategies to evaluate employability.</li>
+    </ul>
 
-      <h3>Personal Information</h3>
-      <ul>
-        <li><strong>Date of Birth:</strong> 20-07-2005</li>
-        <li><strong>Hobbies:</strong> Video Editing, Playing Cricket</li>
-      </ul>
-    </div>
-  </div>
+    <h2>Personal Information</h2>
+    <ul>
+      <li>Date of Birth: 20-07-2005</li>
+      <li>Hobbies: Video Editing, Playing Cricket</li>
+    </ul>
+  </section>
 </body>
 </html>
